--- a/SeguridadWeb.AccesoADatos/SeguridadWeb.AccesoADatos.csproj
+++ b/SeguridadWeb.AccesoADatos/SeguridadWeb.AccesoADatos.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0-preview.2.21154.2" />
   </ItemGroup>
 
